tests/NormalTests/paczka1/fuzzy1/91830166.err
Error in line 4: lqTnpW S935 92,7
Error in line 5: lqTnpW S889 25,7
Error in line 12: lqTnpW S935 177,36
Error in line 23: kmJz S935 31,6
